manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    run: node-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      run: node
  template:
    metadata:
      labels:
        run: node
    spec:
      containers:
      - name: node-app
        image: jobri237/lab4-app:1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    run: mongo-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      run: mongodb
  template:
    metadata:
      labels:
        run: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
