manifests/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: node-pod
  labels:
    run: node
spec:
  hostname: node-app
  containers:
  - name: node-app
    image: jobri237/lab4-app:1
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    run: mongodb
spec:
  hostname: mongodb
  containers:
  - name: mongodb
    image: mongo
    ports:
      - containerPort: 27017
